# pinky

./: CMakeLists.txt  TODO
src/: NeuralNet.cpp  NeuralNet.h  NeuralNetMomento.h  Neuron.cpp  Neuron.h  pinky.cpp
src/neuron/: Backprop.txt  BiasNeuron.cpp  BiasNeuron.h  INeuron.h  InputNeuron.cpp  InputNeuron.h  Neuron.cpp  Neuron.h  OutputNeuron.cpp  OutputNeuron.h
